--- a/index.html
+++ b/index.html
@@ -321,13 +321,13 @@
 						<span class="theme-buttons" data-color="url(/assets/img/bubbles.jpg)"
 						style="background: url(/assets/img/bubbles.jpg);"></span>
 						<span class="theme-buttons" data-color="url(/assets/img/mountainview.webp)"
-						style="background: url(assets//img/mountainview.webp);"></span>
+						style="background: url(assets/img/mountainview.webp);"></span>
 						<span class="theme-buttons" data-color="url(/assets/img/futuristic.webp)"
 						style="background: url(/assets/img/futuristic.webp);"></span>
 						<span class="theme-buttons" data-color="url(/assets/img/botan.jpg)"
 						style="background: url(/assets/img/botan.jpg);"></span>
 						<span class="theme-buttons" data-color="url(/assets/img/applestyle.jpg)"
-						style="background: url(assets//img/applestyle.jpg);"></span>
+						style="background: url(assets/img/applestyle.jpg);"></span>
 						<span class="theme-buttons" data-color="url(/assets/img/waves.jpg)"
 						style="background: url(/assets/img/waves.jpg);"></span>
 					</div>
