--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 		<!-- NAVBAR -->
 		<div class="container mt-3">
-			<div class="row justify-content-end">
+			<div class="row justify-content-end" id="top-section">
 				<div class="col-6 px-0">
 					<ul class="nav nav-pills">
 						<div class="col-lg-4 px-0">
